--- a/phoneBook.czerviik/czerviik.PhoneBook/PhoneBook/PhoneBook.csproj
+++ b/phoneBook.czerviik/czerviik.PhoneBook/PhoneBook/PhoneBook.csproj
@@ -16,6 +16,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Spectre.Console" Version="0.51.1" />
+    <None Update="appsettings.json">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
